[gd_scene load_steps=3 format=2]

[ext_resource path="res://Dial.gd" type="Script" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]

[node name="World" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTo0" type="Button" parent="Buttons"]
margin_right = 104.0
margin_bottom = 20.0
text = "Set Target to 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTo25" type="Button" parent="Buttons"]
margin_top = 40.0
margin_right = 112.0
margin_bottom = 60.0
text = "Set Target to 25"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTo50" type="Button" parent="Buttons"]
margin_top = 80.0
margin_right = 112.0
margin_bottom = 100.0
text = "Set Target to 50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTo75" type="Button" parent="Buttons"]
margin_top = 120.0
margin_right = 112.0
margin_bottom = 140.0
text = "Set Target to 75"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTo100" type="Button" parent="Buttons"]
margin_top = 160.0
margin_right = 120.0
margin_bottom = 180.0
text = "Set Target to 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dial" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 640.0
bbcode_enabled = true
bbcode_text = "[right]Max Health: 100
Current Health: 50
Current Angle: 3.14
[/right]"
text = "Max Health: 100
Current Health: 50
Current Angle: 3.14
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 200.0
margin_bottom = 590.0

[connection signal="pressed" from="Buttons/ButtonTo0" to="." method="_on_ButtonTo0_pressed"]
[connection signal="pressed" from="Buttons/ButtonTo25" to="." method="_on_ButtonTo25_pressed"]
[connection signal="pressed" from="Buttons/ButtonTo50" to="." method="_on_ButtonTo50_pressed"]
[connection signal="pressed" from="Buttons/ButtonTo75" to="." method="_on_ButtonTo75_pressed"]
[connection signal="pressed" from="Buttons/ButtonTo100" to="." method="_on_ButtonTo100_pressed"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
